4.deployment_health.yaml
apiVersion:	apps/v1
kind: Deployment 
metadata:
  name: vote-deployment		
  namespace: jestebangl
spec:		
  replicas:	2
  selector:			
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:					
      containers:
      - name: vote
        image: schoolofdevops/vote:v2
        ports:
        - containerPort: 80
