5.ServiceClusterIP.yaml
kind: Service 
apiVersion: v1 
metadata:		
  name: svcvote
  namespace: project-dojo
spec:
    selector:
      app: vote
    ports:	
    - protocol: TCP
      port: 80		
    type: ClusterIP
