6.ServiceLoadBalancer.yaml
kind: Service 
apiVersion: v1 
metadata:
  name:	svcvote-lb
  namespace: lulu
spec:
  selector:
    app: vote	
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
