7.VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: jestebangl
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      - 'project-dojo/*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vote-vs
  namespace: jestebangl
spec:
  hosts:
  - '*.amazonaws.com'
  gateways:
    -  gateway
  http:
    - match:
        - uri:
            prefix: /vote
      rewrite:
        uri: /
      route:
        - destination:
            host: svcvote
            port:
              number: 80
